--- a/ts/packages/agents/montage/src/site/styles.css
+++ b/ts/packages/agents/montage/src/site/styles.css
@@ -4,75 +4,75 @@ Licensed under the MIT License.
 */
 
 body {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 button {
-    width: 100px;
-    height: 25px;
+  width: 100px;
+  height: 25px;
 }
 
 img {
-    max-height: 165px;
-    border-radius: 3%;
-    /*margin: 2px;*/
+  max-height: 165px;
+  border-radius: 3%;
+  /*margin: 2px;*/
 }
 
 .imgDiv {
-    position: relative;
+  position: relative;
 }
 
 .indexDiv {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    font-size: 14px;
-    background-color: black;
-    opacity: 35%;
-    color: white;
-    border-radius: 5px;
-    margin-bottom: 5px;
-    margin-right: 3px;
-    width: 16px;
-    height: 16px;
-    text-align: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  font-size: 14px;
+  background-color: black;
+  opacity: 35%;
+  color: white;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  margin-right: 3px;
+  width: 16px;
+  height: 16px;
+  text-align: center;
 }
 
 .title {
-    position: fixed;
-    width: 100%;
-    height: 30px;
-    top: 0px;
-    left: 0px;
-    text-align: center;
-    font-size: xx-large;
+  position: fixed;
+  width: 100%;
+  height: 30px;
+  top: 0px;
+  left: 0px;
+  text-align: center;
+  font-size: xx-large;
 }
 
 #mainContainer {
-    position: fixed;
-    top: 45px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    overflow-y: scroll;
-    
-    display: inline-flex;
-    /* flex-direction: row; */
-    flex-flow: wrap;
-    /* flex: auto; */
-    align-items: stretch;
-    align-content: flex-start;
-    justify-content: center;
-    gap: 2px;
+  position: fixed;
+  top: 45px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  overflow-y: scroll;
+
+  display: inline-flex;
+  /* flex-direction: row; */
+  flex-flow: wrap;
+  /* flex: auto; */
+  align-items: stretch;
+  align-content: flex-start;
+  justify-content: center;
+  gap: 2px;
 }
 
 .unselected {
-    opacity: .25;
+  opacity: 0.25;
 }
 
 .selected {
-    border: chartreuse;
-    border-width: 2px;
-    border-style: dotted;
-    border-radius: 3%;
+  border: chartreuse;
+  border-width: 2px;
+  border-style: dotted;
+  border-radius: 3%;
 }
