--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -559,7 +559,7 @@ table.table-message td {
 
 .chat-smallImage img {
   max-width: 175px;
-  max-height: 175px;;
+  max-height: 175px;
 }
 
 .chat-input-separator-container {
