GenerateResponse actions from the chat agent now include images if they are being referenced. (#1109)

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -557,6 +557,11 @@ table.table-message td {
   overflow: auto;
 }
 
+.chat-smallImage img {
+  max-width: 175px;
+  max-height: 175px;
+}
+
 .chat-input-separator-container {
   width: 4px;
   margin-bottom: 7px;
