--- a/ts/packages/agents/turtle/src/site/styles.css
+++ b/ts/packages/agents/turtle/src/site/styles.css
@@ -8,6 +8,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: column;
   height: 100vh;
 }
 
@@ -15,6 +16,7 @@ div.main {
   border: 1px solid black;
   width: 800px;
   height: 800px;
+  position: relative;
 }
 
 div.turtle {
