--- a/docs/_includes/base.njk
+++ b/docs/_includes/base.njk
@@ -13,7 +13,7 @@
       <a href="{{ '/' | url }}" class="site-title">TypeAgent</a>
       <nav class="main-nav">
         <ul>
-          <li><a href="{{ '/' | url }}">Documentation</a></li>
+          <li><a href="{{ '/' | url }}">Docs</a></li>
           <li><a href="{{ site.github }}">GitHub</a></li>
         </ul>
       </nav>
