--- a/ts/packages/agents/montage/src/site/styles.css
+++ b/ts/packages/agents/montage/src/site/styles.css
@@ -72,9 +72,9 @@ img {
 }
 
 #focusedImage {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
   border-radius: 0px;
 }
 
