--- a/ts/packages/agents/montage/src/site/styles.css
+++ b/ts/packages/agents/montage/src/site/styles.css
@@ -69,14 +69,21 @@ img {
 #focusContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: center;  
 }
 
 #focusedImage {
   max-width: 100%;
   max-height: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: contain;
-  border-radius: 0px;
+  border-radius: 2px;
+}
+
+.focusImageContainer {
+  flex-grow: 1;
+  height: 100%;
 }
 
 .focusOff {
