--- a/ts/packages/agents/montage/src/site/styles.css
+++ b/ts/packages/agents/montage/src/site/styles.css
@@ -66,6 +66,70 @@ img {
   gap: 2px;
 }
 
+#focusContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#focusedImage {
+  max-width: 100%;
+  max-height: 100%;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 2px;
+}
+
+.focusImageContainer {
+  flex-grow: 1;
+  height: 100%;
+}
+
+.focusOff {
+  #focusContainer {
+    display: none;
+  }
+
+  #mainContainer {
+  }
+}
+
+input[type="button"] {
+  width: 35px;
+  height: 75px;
+  border-radius: 3px;
+}
+
+.focusOn {
+  #focusContainer {
+    position: fixed;
+    top: 45px;
+    bottom: 200px;
+    right: 0px;
+    left: 0px;
+  }
+
+  #mainContainer {
+    top: auto;
+    flex-flow: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    justify-content: normal;
+
+    img {
+      cursor: pointer;
+    }
+  }
+
+  .focusedImage {
+    border: lightblue;
+    border-width: 2px;
+    border-style: dotted;
+    border-radius: 0px;
+  }
+}
+
 .unselected {
   opacity: 0.25;
 }
