bing with grounding working

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -876,3 +876,13 @@ input[type="file"] {
   font-style: italic;
   color: lightgray;
 }
+
+.references {
+  font-size: small;
+  font-weight: 400;
+
+  a {
+    font-size: small;
+    font-weight: 200;
+  }
+}
